# CamDemo

./: .gitignore  AuthHttpClient.cpp  CMakeLists.txt  CamDemo.cpp  CamDemo.h  CamDemo.qrc  CamDemo.ui  DesktopFrontendServer.cpp  DesktopFrontendServer.h  DesktopWeb.h  LoginDialog.cpp  LoginDialog.h  NApplication.cpp  NApplication.h  NMainWindow.cpp  NMainWindow.h  QCefRuntime.cpp  QCefRuntime.h  README.md  TitleBarUserChip.cpp  TitleBarUserChip.h  UserSession.cpp  UserSession.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_qcef.cpp
cloud-server/: CMakeLists.txt  account_auth_dialog.h  auth_http_client.h  cloud_server_config.h  desktop_runtime_injection.cpp  desktop_runtime_injection.h  desktop_web.h  desktop_web_server.cpp  desktop_web_server.h  file_manager_view.cpp  file_manager_view.h  q_cef_runtime.cpp  q_cef_runtime.h  title_bar_user_chip.cpp  title_bar_user_chip.h  user_auth_service.cpp  user_auth_service.h  user_module_config.h  user_session.cpp  user_session.h
cloud_server/: CMakeLists.txt  account_auth_dialog.cpp  account_auth_dialog.h  cloud_server_global.h  desktop_runtime_injection.h  desktop_web.h  file_manager_view.cpp  local_files_snapshot.h  login_web_auth_helpers.h  user_session.h
qj_user/: CMakeLists.txt  UserAuthService.h  UserModuleConfig.h  UserSession.h  qj_user_global.h
translations/: CamDemo_zh_CN.ts
ultramill/: CMakeLists.txt  napplication.cpp  napplication.h  nmainwindow.cpp  nmainwindow.h
user/: AccountAuthDialog.cpp  AccountAuthDialog.h  AuthHttpClient.cpp  AuthHttpClient.h  CMakeLists.txt  CefInitializer.cpp  CefInitializer.h  DesktopAuthBridge.h  DesktopWeb.h  FileManagerDialog.cpp  FileManagerDialog.h  FileManagerView.cpp  FileManagerView.h  LocalFilesBridge.h  LocalFilesSnapshot.cpp  LoginDialog.cpp  LoginDialog.h  LoginWebAuthHelpers.cpp  LoginWebAuthHelpers.h  MockCamOptions.cpp  MockCamOptions.h  User.h  UserApi.h  UserAuthService.cpp  UserAuthService.h  UserModuleConfig.h  UserSession.cpp  UserSession.h  qj_user.h  user_auth_service.cpp  user_global.h
